# DGSF-AvA

./: .gitmodules  CMakeLists.txt  generate.py
cava/nightwatch/: model.py
cava/nightwatch/generator/c/: callee.py  cmakelists.py  instrumentation.py  stubs.py  worker.py
cava/nightwatch/parser/c/: __init__.py  nightwatch.h  reload_libclang.py
cava/samples/cudart/: cudart.cpp
cava/samples/onnxruntime/: README.md  onnx_dump.cpp  onnx_opt_full.cpp  onnx_opt_none.cpp  onnx_opt_temp.cpp
common/: cmd_channel.hpp  cmd_channel_record.cpp  cmd_channel_socket_utilities.cpp  cmd_handler.cpp  cmd_handler.hpp  common_context.h  endpoint_lib.cpp  endpoint_lib.hpp  logging.cpp  shadow_thread_pool.cpp  shadow_thread_pool.hpp
common/extensions/: cudart_10.1_utilities.cpp  cudart_10.1_utilities.hpp  cudnn_optimization.h  tcp_timeline_client.hpp
common/support/: env_variables.h
guestlib/: cmd_channel_socket_tcp.cpp  guest_thread.cpp  guest_thread.h  init.cpp
guestlib/extensions/: cmd_batching.cpp  cudart_10.1_utilities.cpp  cudart_10.1_utilities.hpp  cudnn_optimization.cpp  guest_cmd_batching_queue.cpp  tf_optimization.cpp
tools/: get_comm.py  parse_stats.py
vm/scripts/: settings
worker/: CMakeLists.txt  cmd_channel_socket_tcp.cpp  manager_service.cpp  manager_service.hpp  worker.cpp  worker.h  worker_context.cpp  worker_context.h
worker/extensions/: cudart_10.1_utilities.cpp  cudnn_optimization.cpp  tf_optimization.cpp
worker/extensions/memory_server/: client.cpp  client.hpp  common.hpp  cuda_helper.hpp
worker/serverless_gpu/: CMakeLists.txt  central_manager.cpp  manager.cpp  svgpu_manager.cpp  svgpu_manager.hpp
worker/serverless_gpu/pb/: .gitignore
worker/serverless_gpu/scheduling/: best_fit.hpp  common.hpp  first_fit.hpp  worst_fit.hpp
